# ml-model-serving-fastapi-docker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  create_model.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
model/: metrics.json
tests/: test_api.py
